correct style for mark headers

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 	<main>
 		<section class="ba-main__about ba-container__flex">
 			<section class="ba-about__column ba-column">
-				<div class="ba-span__box"></div><h1>about us</h1>
+				<h1 class="ba-header__mark">about us</h1>
 			<h3>We are awesome</h3>
 			<p>
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
 			</p>
 		</section>
 			<section class="ba-about__column ba-column">
-				<div class="ba-span__box"></div><h1>what we do</h1>
+				<h1 class="ba-header__mark">what we do</h1>
 			<h3>Creative & Digital</h3>
 			<p>
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
@@ -54,10 +54,8 @@
 		</section>
 		<section class="ba-main__benefits">
 			<header class="ba-benefits__header">
-				<div class="ba-span">
-					<div class="ba-span__box"></div>
-					<h1>some benefits</h1>
-				</div>
+					<h1 class="ba-header__mark">some benefits</h1>
+
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</header>
 			<section class="ba-benefits__content ba-container__flex">
@@ -103,10 +101,10 @@
 
 		<section class="ba-main__team">
 			<header class="ba-team__header">
-				<div class="ba-span">
-					<div class="ba-span__box"></div>
-					<h1>THE DREAM TEAM</h1>
-				</div>
+
+
+					<h1 class="ba-header__mark">THE DREAM TEAM</h1>
+
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</header>
 			<section class="ba-team__content ba-container__flex">
